add many things

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
         "debug.h": "c"
-    }
+    },
+    "cmake.sourceDirectory": "/home/siagraw/OSmosis/seL4",
+    "cmake.configureOnOpen": false
 }
