--- a/sel4allocman/Makefile
+++ b/sel4allocman/Makefile
@@ -28,6 +28,8 @@ C_FLAGS := -std=gnu11 -g3 -O3 -nostdlib -ffreestanding -Wall -Wno-maybe-uninitia
 		   -Iinclude/mode/64/ \
 		   -I$(BOARD_DIR)/include  \
 		   -Iinclude/sel4_arch/$(ARCH_DIR) \
+		   -Isel4_arch/$(ARCH) \
+		   -Iarch/arm \
 		   -I../sel4utils/include \
 		   -I../sel4utils/arch_include/arm \
 		   -I../sel4utils/sel4_arch_include/$(ARCH) \
@@ -60,10 +62,10 @@ OBJS := allocman.o bootstrap.o \
 		dual_pool.o fixed_pool.o k_r_malloc.o malloc.o virtual_pool.o vspace_pool.o \
 		split.o twinkle.o
 
-# $(BUILD_DIR)/libsel4utils.a: ../sel4utils/Makefile
-# 	$(MAKE) ARCH=aarch64 BUILD_DIR=$(BUILD_DIR) TOOLCHAIN=$(TOOLCHAIN) GCC_CPU=$(GCC_CPU) -C ../sel4utils
+$(BUILD_DIR)/libsel4utils.a: ../sel4utils/Makefile
+	$(MAKE) ARCH=aarch64 BUILD_DIR=$(BUILD_DIR) TOOLCHAIN=$(TOOLCHAIN) GCC_CPU=$(GCC_CPU) -C ../sel4utils
 
-$(BUILD_DIR)/%.o : src/%.c Makefile #$(BUILD_DIR)/libsel4utils.a
+$(BUILD_DIR)/%.o : src/%.c Makefile $(BUILD_DIR)/libsel4utils.a
 	$(GCC) -c $(C_FLAGS) $< -o $@
 
 $(BUILD_DIR)/%.o : src/cspace/%.c Makefile $(BUILD_DIR)/libsel4utils.a
