--- a/sel4utils/Makefile
+++ b/sel4utils/Makefile
@@ -42,7 +42,8 @@ C_FLAGS := -std=gnu11 -g3 -O3 -nostdlib -ffreestanding -Wall -Wno-maybe-uninitia
 		   -I../sel4simple/arch_include/arm \
 		   -I../sel4simple/include \
 		   -I../sel4runtime/include \
-		   -I../sel4runtime/include/sel4_arch/$(ARCH)
+		   -I../sel4runtime/include/sel4_arch/$(ARCH) \
+		   -I../sel4debug/include/
 
 
 ASM_CPP_FLAGS := -x assembler-with-cpp -c -g3 $(ASM_CPP_FLAGS_ARCH)
