fix app name in BLOB

--- a/OSmosisRootServer/Makefile
+++ b/OSmosisRootServer/Makefile
@@ -65,7 +65,7 @@ $(BUILD_DIR)/app.elf: app/Makefile
 	$(MAKE) ARCH=aarch64 BUILD_DIR=`pwd`/$(BUILD_DIR) -C ./app
 
 $(BUILD_DIR)/global_data.o: global_data.S Makefile $(BUILD_DIR)/app.elf
-	$(CC) -c -g3 -DBLOB_PATH=\"/bin/ls\"  -x assembler-with-cpp  $< -o $@
+	$(CC) -c -g3 -DBLOB_PATH=\"build/app.elf\"  -x assembler-with-cpp  $< -o $@
 
 $(BUILD_DIR)/libsel4debug.a: ../sel4debug/Makefile
 	$(MAKE) ARCH=aarch64 BUILD_DIR=`pwd`/$(BUILD_DIR) TOOLCHAIN=$(TOOLCHAIN)- GCC_CPU=$(CPU) -C ../sel4debug
