--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,6 @@
     },
     "C_Cpp.default.compileCommands": "/home/siagraw/OSmosis/compile_commands.json",
     "C_Cpp.codeAnalysis.clangTidy.useBuildPath": true,
-    "C_Cpp.errorSquiggles": "disabled"
+    "C_Cpp.errorSquiggles": "disabled",
+    "cmake.sourceDirectory": "/home/siagraw/OSmosis/kernel"
 }
