update settings and compile commanfdss

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,46 @@
         "cpu_obj.h": "c",
         "vspace.h": "c",
         "page.h": "c",
-        "attribute.h": "c"
+        "attribute.h": "c",
+        "*.bf": "c",
+        "array": "c",
+        "atomic": "c",
+        "bit": "c",
+        "*.tcc": "c",
+        "chrono": "c",
+        "cmath": "c",
+        "compare": "c",
+        "complex": "c",
+        "concepts": "c",
+        "string": "c",
+        "unordered_map": "c",
+        "exception": "c",
+        "algorithm": "c",
+        "memory": "c",
+        "memory_resource": "c",
+        "random": "c",
+        "string_view": "c",
+        "type_traits": "c",
+        "utility": "c",
+        "functional": "c",
+        "iosfwd": "c",
+        "istream": "c",
+        "limits": "c",
+        "mutex": "c",
+        "new": "c",
+        "numeric": "c",
+        "ostream": "c",
+        "ratio": "c",
+        "sstream": "c",
+        "stop_token": "c",
+        "streambuf": "c",
+        "system_error": "c",
+        "tuple": "c",
+        "typeinfo": "c",
+        "optional": "c",
+        "fstream": "c",
+        "ranges": "c",
+        "*.inc": "c"
     },
     "C_Cpp.default.compileCommands": "/home/siagraw/OSmosis/compile_commands.json",
     "C_Cpp.codeAnalysis.clangTidy.useBuildPath": true,
