fork util_libs and kernel too

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,18 +1,18 @@
 [submodule "kernel"]
 	path = kernel
-	url = https://github.com/seL4/seL4.git
+	url = git@github.com:sid-agrawal/seL4.git
 [submodule "projects/musllibc"]
 	path = projects/musllibc
 	url = https://github.com/seL4/musllibc.git
 [submodule "projects/seL4_libs"]
 	path = projects/seL4_libs
-	url = https://github.com/seL4/seL4_libs
+	url = git@github.com:sid-agrawal/seL4_libs.git
 [submodule "projects/sel4runtime"]
 	path = projects/sel4runtime
 	url = git@github.com:seL4/seL4runtime.git
 [submodule "projects/util_libs"]
 	path = projects/util_libs
-	url = git@github.com:seL4/util_libs.git
+	url = git@github.com:sid-agrawal/util_libs.git
 [submodule "projects/sel4_projects_libs"]
 	path = projects/sel4_projects_libs
 	url = git@github.com:seL4/seL4_projects_libs.git
