--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,7 +49,9 @@
         "*.inc": "c",
         "vspace_internal.h": "c",
         "process.h": "c",
-        "thread": "c"
+        "thread": "c",
+        "test_init_data.h": "c",
+        "pd_clientapi.h": "c"
     },
     "C_Cpp.default.compileCommands": "/home/siagraw/OSmosis/compile_commands.json",
     "C_Cpp.codeAnalysis.clangTidy.useBuildPath": true,
