--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,10 +51,16 @@
         "process.h": "c",
         "thread": "c",
         "test_init_data.h": "c",
-        "pd_clientapi.h": "c"
+        "pd_clientapi.h": "c",
+        "pd_obj.h": "c",
+        "mo_component.h": "c",
+        "badge_usage.h": "c",
+        "mutex.h": "c",
+        "capops.h": "c"
     },
     "C_Cpp.default.compileCommands": "/home/siagraw/OSmosis/compile_commands.json",
     "C_Cpp.codeAnalysis.clangTidy.useBuildPath": true,
     "C_Cpp.errorSquiggles": "disabled",
-    "cmake.sourceDirectory": "/home/siagraw/OSmosis/kernel"
+    "cmake.sourceDirectory": "/home/siagraw/OSmosis/kernel",
+    "cmake.configureOnOpen": false
 }
