--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,7 +56,8 @@
         "mo_component.h": "c",
         "badge_usage.h": "c",
         "mutex.h": "c",
-        "capops.h": "c"
+        "capops.h": "c",
+        "stdint.h": "c"
     },
     "C_Cpp.default.compileCommands": "/home/siagraw/OSmosis/compile_commands.json",
     "C_Cpp.codeAnalysis.clangTidy.useBuildPath": true,
