Add shared memory example for procfs

--- a/scripts/proc/Makefile
+++ b/scripts/proc/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
 CFLAGS = -Wall -Wextra -O2
-TARGETS = hello hello_malloc pagemap
+TARGETS = hello hello_malloc hello_mmap pagemap
 
 all: $(TARGETS)
 
@@ -9,6 +9,9 @@ hello: hello.c
 
 hello_malloc: hello_malloc.c
 	$(CC) $(CFLAGS) -o hello_malloc hello_malloc.c
+
+hello_mmap: hello_mmap.c
+	$(CC) $(CFLAGS) -o hello_mmap hello_mmap.c
 
 pagemap: pagemap.c
 	$(CC) $(CFLAGS) -o pagemap pagemap.c
