--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,14 +5,19 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python Debugger: Current File with Arguments",
-            "type": "debugpy",
+            "name": "run-proc-model-with-sudo",
+            "type": "python",
+            "cwd": "${workspaceFolder}/scripts/proc",
             "request": "launch",
-            "program": "${file}",
+            "program": "${workspaceFolder}/scripts/proc/proc_model.py",
             "console": "integratedTerminal",
+            "sudo": true,
             "args": [
-                "-f", "basic.csv"
+                "--pid", "1532328",
+                "--csv", "debug.csv"
             ]
-        }
+
+        },
+    //"console": "externalTerminal",
     ]
 }
